ace-kube/src/main/kube/aceoperator-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: aceoperator
  namespace: aceoperator
  labels:
    author: quik-computing
    app: aceoperator
    client: generic
spec:
  restartPolicy: Never
  containers:
  - name: ace-db
    image: mariadb:5.5.52
  - name: ace-data
    image: "quik/aceoperator-data:3.1.0-SNAPSHOT"
    volumeMounts:
      - mountPath: /var/aceoperator
        name: aceoperator-home
  - name: ace-app
    image: "quik/aceoperator-app:3.1.0-SNAPSHOT"
    volumeMounts:
      - mountPath: /var/aceoperator
        name: aceoperator-home
  volumes:
    - name: aceoperator-home
      emptyDir: {}
