ace-kube/src/main/kube/aceoperatordb-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aceoperatordb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aceoperatordb
    spec:
      containers:
      - name: ace-db
        image: mariadb:5.5.52
