ace-kube/src/main/kube/aceoperatordb-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: aceoperatordb
  labels:
    app: aceoperatordb
spec:
  restartPolicy: Never
  containers:
  - name: ace-db
    image: mariadb:5.5.52
