ace-kube/src/main/kube/webtalk-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webtalk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aceoperator
        instance: webtalk
    spec:
      containers:
      - name: ace-data
        image: "quik/aceoperator-data:3.1.0-SNAPSHOT"
        volumeMounts:
          - mountPath: /var/aceoperator
            name: aceoperator
            subPath: instance/webtalk
      - name: ace-app
        image: "quik/aceoperator-app:3.1.0-SNAPSHOT"
        volumeMounts:
          - mountPath: /var/aceoperator
            name: aceoperator
            subPath: instance/webtalk
      securityContext:
        fsGroup: 1000
      volumes:
        - name: aceoperator
          persistentVolumeClaim:
            claimName: aceoperator
