ace-kube/src/main/kube/webtalk-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webtalk
  labels:
    author: quik-computing
    app: aceoperator
    instance: webtalk
spec:
  restartPolicy: Never
  containers:
  - name: ace-data
    image: "quik/aceoperator-data:3.1.0-SNAPSHOT"
    volumeMounts:
      - mountPath: /var/aceoperator
        name: aceoperator-home
  - name: ace-app
    image: "quik/aceoperator-app:3.1.0-SNAPSHOT"
    volumeMounts:
      - mountPath: /var/aceoperator
        name: aceoperator-home
  volumes:
    - name: aceoperator-home
      emptyDir: {}
