ace-kube/src/main/kube/aceoperator-service.yml
kind: Service
apiVersion: v1
metadata:
  name: aceoperator
spec:
  selector:
    app: aceoperator
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8080
    nodePort: 30000
