ace-kube/src/main/kube/aceoperatordb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: aceoperatordb
spec:
  type: ClusterIP
  selector:
    app: aceoperatordb
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
