ace-kube/src/main/kube/instance-service.yml
kind: Service
apiVersion: v1
metadata:
  name: webtalk
spec:
  selector:
    app: aceoperator
    instance: webtalk
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
