ace-kube/src/main/kube/aceoperator-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aceoperator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - aceoperator.net
    secretName: aceoperator-certs
  rules:
    - host: aceoperator.net
      http:
        paths:
          - path: /
            backend:
              serviceName: aceoperator
              servicePort: 8080
